<resources>
    <string name="app_name">SDS</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_failed">Sign in failed</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="e_mail_is_not_valid">E-mail is not valid</string>
    <string name="please_enter_your_first_name">Please enter your first name</string>
    <string name="please_enter_your_last_name">Please enter your last name</string>
    <string name="password_must_be_longer_than_6_characters">Password must be longer than 6 characters</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="register">Register</string>
    <string name="login_error">Sign in failed</string>
    <string name="faculty">Faculty</string>
    <string name="social">Social</string>
    <string name="title_hint">Enter thread title</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="content_hint">Enter thread content</string>
    <string name="post_thread">Post thread</string>
    <string name="cancel">Cancel</string>
    <string name="go_to_login">Go to login</string>
    <string name="create_new_thread">Create new thread</string>
    <string name="go_to_registration">Go to registration</string>
    <string name="hi_user_format">Hi %s</string>
</resources>