<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/color_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/login_button"
        app:layout_constraintTop_toTopOf="parent">

        <com.erasmus.sds.ui.views.IconEditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="64dp"
            android:background="@drawable/background_round_edit_text"
            android:elevation="4dp"
            app:editTextIcon="@drawable/ic_user"
            app:hint="@string/email"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/username_error_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="33dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@id/email_edit_text"
            app:layout_constraintTop_toBottomOf="@id/email_edit_text"
            tools:ignore="UseCompoundDrawables"
            tools:visibility="visible">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_alert"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/error_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:fontFamily="@font/jost_medium"
                android:text="@string/sign_in_failed"
                android:textColor="@color/color_alert_red"
                android:textSize="16sp" />

        </LinearLayout>

        <com.erasmus.sds.ui.views.IconEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_round_edit_text"
            android:elevation="4dp"
            app:editTextIcon="@drawable/ic_password"
            app:hint="@string/password"
            app:isPassword="true"
            app:layout_constraintTop_toBottomOf="@id/username_error_view"
            app:layout_goneMarginTop="20dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/password_edit_text"
            app:layout_goneMarginTop="10dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/login_button"
        style="@style/LargeButtonGold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toTopOf="@id/go_to_registration_button" />

    <TextView
        android:id="@+id/go_to_registration_button"
        style="@style/LargeButtonWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/go_to_registration"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>