<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/color_background">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@id/register_button"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp">

            <com.erasmus.sds.ui.views.IconEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:background="@drawable/background_round_edit_text"
                android:elevation="4dp"
                app:editTextIcon="@drawable/ic_user"
                app:hint="@string/email"
                app:layout_constraintTop_toTopOf="@id/top_constraint" />

            <LinearLayout
                android:id="@+id/email_error_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="33dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/email_edit_text"
                app:layout_constraintTop_toBottomOf="@id/email_edit_text"
                tools:ignore="UseCompoundDrawables"
                tools:visibility="visible">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_alert"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/email_error_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:fontFamily="@font/jost_medium"
                    android:text="@string/e_mail_is_not_valid"
                    android:textColor="@color/color_alert_red"
                    android:textSize="16sp" />

            </LinearLayout>

            <com.erasmus.sds.ui.views.IconEditText
                android:id="@+id/first_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_round_edit_text"
                android:elevation="4dp"
                app:editTextIcon="@drawable/ic_user"
                app:hint="First name"
                app:layout_constraintTop_toBottomOf="@id/email_error_view"
                app:layout_goneMarginTop="20dp" />

            <LinearLayout
                android:id="@+id/first_name_error_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="33dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/first_name_edit_text"
                app:layout_constraintTop_toBottomOf="@id/first_name_edit_text"
                tools:ignore="UseCompoundDrawables"
                tools:visibility="visible">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_alert"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/first_name_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:fontFamily="@font/jost_medium"
                    android:text="@string/please_enter_your_first_name"
                    android:textColor="@color/color_alert_red"
                    android:textSize="16sp" />

            </LinearLayout>

            <com.erasmus.sds.ui.views.IconEditText
                android:id="@+id/last_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_round_edit_text"
                android:elevation="4dp"
                app:editTextIcon="@drawable/ic_user"
                app:hint="Last name"
                app:layout_constraintTop_toBottomOf="@id/first_name_error_view"
                app:layout_goneMarginTop="20dp" />

            <LinearLayout
                android:id="@+id/last_name_error_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="33dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/last_name_edit_text"
                app:layout_constraintTop_toBottomOf="@id/last_name_edit_text"
                tools:ignore="UseCompoundDrawables"
                tools:visibility="visible">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_alert"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/last_name_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:fontFamily="@font/jost_medium"
                    android:text="@string/please_enter_your_last_name"
                    android:textColor="@color/color_alert_red"
                    android:textSize="16sp" />

            </LinearLayout>

            <com.erasmus.sds.ui.views.IconEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_round_edit_text"
                android:elevation="4dp"
                app:editTextIcon="@drawable/ic_password"
                app:hint="@string/password"
                app:isPassword="true"
                app:layout_constraintTop_toBottomOf="@id/last_name_error_view"
                app:layout_goneMarginTop="20dp" />

            <LinearLayout
                android:id="@+id/password_error_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="33dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/password_edit_text"
                app:layout_constraintTop_toBottomOf="@id/password_edit_text"
                tools:ignore="UseCompoundDrawables"
                tools:visibility="visible">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_alert"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/password_error_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:fontFamily="@font/jost_medium"
                    android:text="@string/password_must_be_longer_than_6_characters"
                    android:textColor="@color/color_alert_red"
                    android:textSize="16sp" />

            </LinearLayout>

            <com.erasmus.sds.ui.views.IconEditText
                android:id="@+id/repeat_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_round_edit_text"
                android:elevation="4dp"
                app:editTextIcon="@drawable/ic_password"
                app:hint="Repeat password"
                app:isPassword="true"
                app:layout_constraintTop_toBottomOf="@id/password_error_view"
                app:layout_goneMarginTop="20dp" />

            <LinearLayout
                android:id="@+id/repeat_password_error_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="33dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/repeat_password_edit_text"
                app:layout_constraintTop_toBottomOf="@id/repeat_password_edit_text"
                tools:ignore="UseCompoundDrawables"
                tools:visibility="visible">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_alert"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/repeat_password_error_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:fontFamily="@font/jost_medium"
                    android:text="@string/passwords_do_not_match"
                    android:textColor="@color/color_alert_red"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/repeat_password_error_view"
                app:layout_goneMarginTop="20dp" />

            <View
                android:id="@+id/top_constraint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


    <TextView
        android:id="@+id/register_button"
        style="@style/LargeButtonGold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>